# synology-drive-api

./: pyproject.toml
synology_drive_api/: files.py
