[tool.poetry]
name = "synology_drive_api"
version = "1.0.14"
description = "synology drive api python wrapper"
authors = ["zbjdonald <zbjdonald@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zbjdonald/synology-drive-api"
repository = "https://github.com/zbjdonald/synology-drive-api"
keywords = ["synology", "synology-drive"]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
requests = "^2.32.5"
simplejson = "^3.20.2"
selenium = "^4.41.0"
optionaldict = "^0.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[dependency-groups]
dev = [
    "pandas (>=3.0.1,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)"
]
